  * Clean up sigmoidal-contrast.

2012-07-31  6.7.8-8 Cristy  <quetzlzacatenango@image...>
  * Use ConcatenateString() for multi-block GIF comments.
  * Caption no longer chops off text (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21558).
  * Support LUV colorspace.
  * Don't transform the composite image colorspace, set it instead.

2012-07-30  6.7.8-7 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.8-7, SVN revision 8766.

2012-07-28  6.7.8-7 Glenn Randers-Pehrson <glennrp@image...>
  * Update certain typecasts for libpng < and >= 1.4.0 to allow memory
    allocation > 4GB and prevent a DOS.

2012-07-28  6.7.8-7 Cristy  <quetzlzacatenango@image...>
  * Set DICOM grayscale images to the gray colorspace.
  * Missing grestore from ps3.c (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20445).
  * Use GetMagickResourceLimit(ThreadResource) to set the # threads (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=21543).

2012-07-22  6.7.8-6 Glenn Randers-Pehrson <glennrp@image...>
  * Only report sRGB, iCCP, gAMA, cHRM chunks in "identify" output when
    these chunks were actually present in input, and not when they were
    inserted by the PNG decoder.

2012-07-22  6.7.8-6 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.8-6, SVN revision 8720.

2012-07-21  6.7.8-6 Glenn Randers-Pehrson <glennrp@image...>
  * Make sure "intent" is initialized in the PNG decoder.

2012-07-21  6.7.8-5 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.8-5, SVN revision 8717.

2012-07-20  6.7.8-5 Glenn Randers-Pehrson <glennrp@image...>
  * Corrected an error in the logic introduced in 6.7.8-3 to always write
    a color PNG when image->colorspace is sRGB.

2012-07-19  6.7.8-5 Cristy  <quetzlzacatenango@image...>
  * Inverse YUV colorspace now produces pure red as expected.
  * Support halted streams:
    cat image.pnm | convert 'pnm:fd:0[0]' 'pnm:fd:0[0]' x:.
